# Forest-Game-Engine

./: .gitmodules  CMakeLists.txt  README.md  array.h  main.cpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glm/glm/detail/: type_half.inl
libraries/glm/glm/gtx/: fast_exponential.inl
libraries/glm/glm/simd/: platform.h
libraries/glm/test/core/: core_func_integer_find_msb.cpp
libraries/glm/test/gtc/: gtc_bitfield.cpp
libraries/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp
libraries/imgui/examples/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libraries/imgui/examples/example_allegro5/: main.cpp
libraries/imgui/examples/example_apple_opengl2/: main.mm
libraries/imgui/examples/example_emscripten/: main.cpp
libraries/imgui/examples/example_glfw_opengl2/: main.cpp
libraries/imgui/examples/example_glfw_opengl3/: main.cpp
libraries/imgui/examples/example_glfw_vulkan/: main.cpp
libraries/imgui/examples/example_glut_opengl2/: main.cpp
libraries/imgui/examples/example_marmalade/: main.cpp
libraries/imgui/examples/example_sdl_directx11/: main.cpp
libraries/imgui/examples/example_sdl_opengl2/: main.cpp
libraries/imgui/examples/example_sdl_opengl3/: main.cpp
libraries/imgui/examples/example_sdl_vulkan/: main.cpp
libraries/imgui/examples/example_win32_directx10/: main.cpp
libraries/imgui/examples/example_win32_directx11/: main.cpp
libraries/imgui/examples/example_win32_directx12/: main.cpp
libraries/imgui/examples/example_win32_directx9/: main.cpp
libraries/imgui_old/: imgui.cpp  imgui.h
libraries/imgui_old/examples/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libraries/imgui_old/examples/example_allegro5/: main.cpp
libraries/imgui_old/examples/example_apple_opengl2/: main.mm
libraries/imgui_old/examples/example_emscripten/: main.cpp
libraries/imgui_old/examples/example_glfw_opengl2/: main.cpp
libraries/imgui_old/examples/example_glfw_opengl3/: main.cpp
libraries/imgui_old/examples/example_glfw_vulkan/: main.cpp
libraries/imgui_old/examples/example_glut_opengl2/: main.cpp
libraries/imgui_old/examples/example_marmalade/: main.cpp
libraries/imgui_old/examples/example_sdl_directx11/: main.cpp
libraries/imgui_old/examples/example_sdl_opengl2/: main.cpp
libraries/imgui_old/examples/example_sdl_opengl3/: main.cpp
libraries/imgui_old/examples/example_sdl_vulkan/: main.cpp
libraries/imgui_old/examples/example_win32_directx10/: main.cpp
libraries/imgui_old/examples/example_win32_directx11/: main.cpp
libraries/imgui_old/examples/example_win32_directx12/: main.cpp
libraries/imgui_old/examples/example_win32_directx9/: main.cpp
libraries/soloud/src/core/: soloud.cpp  soloud_core_basicops.cpp
res/pocillopora-eydouxi/source/Hawaii2015-P_Eydouxi/: Coral32mesh-90.mtl
shaders/: fragmentShader.fs  vertexShader.vs
source/: Camera.h  Shader.h  main.cpp  stb_image.h
source/Cpps/Engine/Animations/: Animation.cpp  AnimationHandler.cpp  Joint.cpp  JointTransform.cpp  KeyFrame.cpp  Quaternion.cpp  (+1 more)
source/Engine/Animations/: AnimationHandler.cpp  Joint.cpp  JointTransform.cpp  Skeleton.cpp
source/Engine/Camera/: Camera.cpp
source/Engine/Collisions/: CollisionHandler.cpp
source/Engine/GUI/: .Button.cpp.swp  .Quad.cpp.swp  Button.cpp  Quad.cpp
source/Engine/Graphics/: HDR.cpp
source/Engine/IO/: .Window.cpp.swp  Input.cpp  Input.h  Window.cpp
source/Engine/Models/: Entity.cpp  Mesh.cpp  Model.cpp  Texture.cpp
source/Engine/Shader/: Shader.cpp
source/Engine/Skybox/: CubeMapTexture.cpp  Skybox.cpp
source/Engine/Terrain/: Terrain.cpp  TerrainMesh.cpp  TerrainTextureMap.cpp
source/Game/: Player.cpp
source/Game/Entities/: Wolf.cpp
source/Game/Loop/: .main.cpp.swp  main.cpp
source/Game/Player/: Player.cpp  Shooter.cpp
source/Headers/: Camera.h  array.h
source/Headers/Engine/: Camera.h  Constants.h  Shader.h
source/Headers/Game/: Player.h
source/Test/: Plane.cpp  Plane.h
temporary_lib/imgui_club/imgui_memory_editor/: imgui_memory_editor.h
(+163 files in other folders)
